--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "franken-ui": "^1.1.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "tmi.js": "^1.8.5"
